--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gather-automate",
-  "version": "0.1",
+  "version": "0.1.0",
   "description": "Automation tool to build gather.town map",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.6"
