--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "gather-automate",
   "version": "0.1.0",
   "description": "Automation tool to build gather.town map",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "clean": "rm -rf dist"
+  },
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.6"
@@ -11,6 +18,7 @@
     "@types/node": "^18.6.3",
     "@types/node-fetch": "^2.6.2",
     "ts-node": "^10.9.1",
+    "tsc": "^2.0.4",
     "typescript": "^4.7.4"
   }
 }
